# opendaq_gui

./: AppContext.cpp  AppContext.h  CMakeLists.txt  CMakePresets.json  DetachableTabWidget.cpp  DetachableTabWidget.h  DetachedWindow.cpp  DetachedWindow.h  DropOverlay.cpp  DropOverlay.h  LayoutManager.cpp  LayoutManager.h  MainWindow.cpp  MainWindow.h  OpenDAQClient (SafeOperation)_config.json  README.md  UpdateChecker.cpp  UpdateChecker.h  UpdateScheduler.cpp  UpdateScheduler.h  main.cpp
.github/workflows/: build-all.yml  linux-deb.yml  linux-installer.yml  macos-dmg.yml  macos-installer.yml  windows-installer.yml
cmake/: MacOSXBundleInfo.plist.in  Packing.cmake  bundle_configuration.cmake  prepare_app_bundle.cmake.in  version.cmake
cmake/logo/: opendaq_qt_gui.icns
cmake/packaging/linux/: install_linux_bundle.cmake.in  opendaq-qt-gui.desktop.in
cmake/packaging/mac/: MacOSXBundleInfo.plist.in  prepare_app_bundle.cmake.in
cmake/packaging/windows/: install_windows_bundle.cmake.in
component/: CMakeLists.txt
component/icons/: icons.qrc
component/include/component/: base_tree_element.h  component_factory.h  component_tree_element.h  component_tree_widget.h  device_tree_element.h  devices_folder_tree_element.h  folder_tree_element.h  function_block_tree_element.h  function_blocks_folder_tree_element.h  icon_provider.h  input_port_folder_tree_element.h  input_port_tree_element.h  server_tree_element.h  servers_folder_tree_element.h  signal_tree_element.h
component/src/: base_tree_element.cpp  component.cpp  component_factory.cpp  component_tree_element.cpp  component_tree_widget.cpp  device_tree_element.cpp  devices_folder_tree_element.cpp  folder_tree_element.cpp  function_block_tree_element.cpp  function_blocks_folder_tree_element.cpp  icon_provider.cpp  input_port_folder_tree_element.cpp  input_port_tree_element.cpp  server_tree_element.cpp  servers_folder_tree_element.cpp  signal_tree_element.cpp  signal_value_widget.cpp
context/: CMakeLists.txt
context/include/context/: AppContext.h  QueuedEventHandler.h  UpdateScheduler.h  gui_constants.h  icon_provider.h  release_asset.h
context/src/: AppContext.cpp  QueuedEventHandler.cpp  UpdateScheduler.cpp  gui_constants.cpp  icon_provider.cpp  theme.cpp
coretypes/: CMakeLists.txt
coretypes/include/coretypes/: base_core_type_handler.h  bool_core_type_handler.h  core_type_factory.h  default_core_type.h  default_core_type_handler.h  enumeration_core_type_handler.h  list_core_type_handler.h
coretypes/src/: base_core_type_handler.cpp  bool_core_type_handler.cpp  core_type_factory.cpp  default_core_type_handler.cpp  enumeration_core_type_handler.cpp  list_core_type_handler.cpp
dialogs/: CMakeLists.txt
dialogs/include/dialogs/: add_device_config_dialog.h  add_device_dialog.h  add_function_block_dialog.h  add_server_dialog.h  call_function_dialog.h  load_configuration_dialog.h  new_version_dialog.h
dialogs/src/: add_device_config_dialog.cpp  add_device_dialog.cpp  add_function_block_dialog.cpp  add_server_dialog.cpp  call_function_dialog.cpp  load_configuration_dialog.cpp  new_version_dialog.cpp
doc/: API.md  ARCHITECTURE.md  README.md
icons/: icons.qrc
logger/: CMakeLists.txt
logger/include/logger/: qt_text_edit_sink.h
logger/src/: qt_text_edit_sink.cpp
opendaq_qt_module/: CMakeLists.txt
opendaq_qt_module/include/opendaq_qt_module/: common.h  module_dll.h  opendaq_qt_module_impl.h  qcustomplot_wrapper.h  qt_plotter_fb_impl.h  version.h
opendaq_qt_module/src/: CMakeLists.txt  module_dll.cpp  opendaq_qt_module_impl.cpp  qt_plotter_fb_impl.cpp  reader_factory_wrapper.h
package/: README.md  version.cmake
package/linux/: CMakeLists.txt  build_deb.sh  build_installer.sh
package/mac/: CMakeLists.txt  build_dmg.sh
package/windows/: CMakeLists.txt  build_installer.bat  installer.nsi.in
property/: CMakeLists.txt
property/include/property/: base_property_item.h  bool_property_item.h  default_core_type.h  dict_property_item.h  enumeration_property_item.h  function_property_item.h  int_property_item.h  list_property_item.h  object_property_item.h  property_factory.h  property_object_view.h  struct_property_item.h
property/include/property/coretypes/: base_core_type_handler.h  bool_core_type_handler.h  core_type_factory.h  default_core_type_handler.h  enumeration_core_type_handler.h
property/src/: base_property_item.cpp  bool_property_item.cpp  dict_property_item.cpp  enumeration_property_item.cpp  function_property_item.cpp  int_property_item.cpp  list_property_item.cpp  object_property_item.cpp  property_factory.cpp  property_object_view.cpp  struct_property_item.cpp
property/src/coretypes/: base_core_type_handler.cpp  bool_core_type_handler.cpp  core_type_factory.cpp  default_core_type_handler.cpp  enumeration_core_type_handler.cpp
utils/: CMakeLists.txt
utils/include/qt_widget_interface/: qt_widget_interface.h
widgets/: CMakeLists.txt
widgets/include/widgets/: component_widget.h  device_logs_widget.h  device_widget.h  function_block_widget.h  input_port_folder_selector.h  input_port_signal_selector.h  input_port_widget.h  property_inspector.h  property_object_view.h  signal_descriptor_widget.h  signal_plot_widget.h  signal_value_widget.h  signal_widget.h  status_message_stack.h
widgets/src/: component_widget.cpp  device_logs_widget.cpp  device_widget.cpp  function_block_widget.cpp  input_port_folder_selector.cpp  input_port_signal_selector.cpp  input_port_widget.cpp  property_inspector.cpp  property_object_view.cpp  signal_descriptor_widget.cpp  signal_plot_widget.cpp  signal_value_widget.cpp  signal_widget.cpp  status_message_stack.cpp
