cmake_minimum_required(VERSION 3.16)

include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/version.cmake)
project(opendaq_qt_gui VERSION ${PROJECT_VERSION} LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# for openDAQ - suppress GCC 15 errors in openDAQ dependencies
if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    add_compile_options(-Wno-error=deprecated-declarations -Wno-error=stringop-overflow -Wno-error=overloaded-virtual)
elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    add_compile_options(-Wno-error=deprecated-declarations -Wno-error=overloaded-virtual)
elseif(MSVC)
    # MSVC equivalent flags (only for C/CXX, not MASM)
    add_compile_options($<$<COMPILE_LANGUAGE:CXX>:/wd4996>)  # disable deprecated declarations warning
endif()

add_subdirectory(external)

# Qt6 setup - enable automatic MOC, UIC, RCC for this project
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

# Disable Qt keywords (signals/slots) globally to avoid conflicts with openDAQ
# openDAQ uses 'signals' as parameter/variable names
# Use Q_SIGNALS, Q_SLOTS, Q_EMIT instead in Qt code
add_compile_definitions(QT_NO_KEYWORDS)

# Find Qt6 (fetched or system-installed in external/qt)
find_package(Qt6 REQUIRED COMPONENTS Core Widgets Network DBus)

add_subdirectory(context)
add_subdirectory(logger)
add_subdirectory(coretypes)
add_subdirectory(property)
add_subdirectory(widgets)
add_subdirectory(dialogs)
add_subdirectory(utils)
add_subdirectory(component)
add_subdirectory(opendaq_qt_module)

# Source files
set(SOURCES
    main.cpp
    MainWindow.cpp
    LayoutManager.cpp
    DetachableTabWidget.cpp
    DetachedWindow.cpp
    DropOverlay.cpp
    UpdateChecker.cpp
)

set(HEADERS
    MainWindow.h
    LayoutManager.h
    DetachableTabWidget.h
    DetachedWindow.h
    DropOverlay.h
    UpdateChecker.h
)

# Create executable
add_executable(${PROJECT_NAME}
    ${SOURCES}
    ${HEADERS}
)

# Ensure openDAQ Qt module is built before macOS bundle prep runs.
# The module is not linked into the main executable, so we must wire an explicit dependency.
if(APPLE AND TARGET qt_module)
    add_dependencies(${PROJECT_NAME} qt_module)
endif()

# Link Qt6 libraries
target_link_libraries(${PROJECT_NAME}
    PRIVATE
        utils
        Qt6::Core
        Qt6::Widgets
        Qt6::Network
        Qt6::DBus
        context
        logger
        component
        dialogs
        property
        widgets
        daq::qt_module
        daq::coreobjects
        daq::coretypes
        daq::opendaq
)

# Option for extra module path (for bundle packaging)
if(APPLE)
    set(EXTRA_MODULE_PATH ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} CACHE STRING "Additional path for openDAQ modules (relative or absolute)")
else()
    set(EXTRA_MODULE_PATH "" CACHE STRING "Additional path for openDAQ modules (relative to executable)")
endif()

# Pass extra module path and app version to the application via compile definition
if(EXTRA_MODULE_PATH)
    target_compile_definitions(${PROJECT_NAME} PRIVATE EXTRA_MODULE_PATH="${EXTRA_MODULE_PATH}")
endif()
target_compile_definitions(${PROJECT_NAME} PRIVATE APP_VERSION="${PROJECT_VERSION}")

# Platform-specific bundle configuration
include(cmake/bundle_configuration.cmake)

include(cmake/Packing.cmake)

# Ensure that running `cpack` from the top-level build directory uses only this
# project's packaging configuration, not one generated by dependencies brought
# in via add_subdirectory/FetchContent.
#
# Many third-party projects call `include(CPack)` during configuration which
# generates/overwrites `${CMAKE_BINARY_DIR}/CPackConfig.cmake`. We therefore
# configure CPack *last* at the top level so our config wins.
if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
    set(CPACK_PROJECT_CONFIG_FILE "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Packing.cmake")
    include(CPack)
endif()